tests/single_instruction_translation_validation/mcsema/register-variants/vsqrtsd_xmm_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:200:26: error: use of undefined value '@sqrt'
  %27 = tail call double @sqrt(double %7) #21
                         ^
0.01user 0.01system 0:00.03elapsed 103%CPU (0avgtext+0avgdata 27828maxresident)k
0inputs+16outputs (0major+3264minor)pagefaults 0swaps
